--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <ul class="nav navbar-nav navbar-right">
      
       
-        <li><a href="#about">HOME</a></li>
-        <li><a href="#services">MI MANO A MANO</a></li>
-        <li><a href="#portfolio">EMPRESARIOS</a></li>
-        <li><a href="#pricing">DESDE CASA</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="http://manoamanohome.ml/">HOME</a></li>
+        <li><a href="http://manoamanomimanoamano.ml/">MI MANO A MANO</a></li>
+        <li><a href="http://manoamanoempresas.ml/">EMPRESAS</a></li>
+        <li><a href="http://manoamanohome.ml/">DESDE CASA</a></li>
+        <li><a href="http://manoamanologin.ml/">LOGIN</a></li>
       </ul>
     </div>
   </div>
