--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@ que quieren trabajar en casa<br> Y las empresas que ofrecen el trabajo <br>
   <i class="fa fa-facebook-square" style="font-size:48px;color:#00c3ff" ></i>
   <i class="fa fa-linkedin-square" style="font-size:48px;color:#00c3ff"></i>
   <i class="fa fa-twitter-square" style="font-size:48px;color:#00c3ff "></i>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-29434072-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </footer>
 
 </body>
