--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="google-site-verification" content="exb_3Y4MAUoSnm5dlFAuw3I2Edt4sx2hqmVr_JMY28Q" />
 </body>
 <!-- Navbar -->
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
